[build-system]
requires = [
    "setuptools >= 61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "panda3d-blend2bam"
dynamic = ["version"]
authors = [
    {name = "Mitchell Stokes"},
]
description = "A tool to convert Blender blend files to Panda3D BAM files"
readme = "README.md"
keywords = ["panda3d", "gamedev"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "panda3d",
    "panda3d-gltf >= 0.6",
]
requires-python = ">= 3.8"

[project.urls]
homepage = "https://github.com/Moguri/blend2bam"

[project.optional-dependencies]
test = ["pytest", "pylint~=2.4.0", "pytest-pylint"]

[project.scripts]
blend2bam = "blend2bam.cli:main"

[project.entry-points."panda3d.loaders"]
blend = "blend2bam.loader:BlendLoader"

[tool.setuptools]
packages = ["blend2bam"]

[tool.setuptools.dynamic]
version = {attr = "blend2bam.version.__version__"}

[tool.pytest.ini_options]
addopts = "--pylint"
