[metadata]
name = panda3d_blend2bam
version = attr: blend2bam.version.__version__
author = Mitchell Stokes
description = A tool to convert Blender blend files to Panda3D BAM files
long_description = file: README.md
long_description_content_type = text/markdown
keywords = panda3d, gamedev
license = MIT
license_file = LICENSE.txt
url = https://github.com/Moguri/panda3d-blend2bam
project_urls =
    Bug Tracker = https://github.com/Moguri/panda3d-blend2bam/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
    panda3d
    panda3d-gltf >= 0.6
python_requires = >=3.6

[options.extras_require]
test =
    pytest
    pylint == 2.4.*
    pytest-pylint

[options.entry_points]
console_scripts =
    blend2bam = blend2bam.cli:main
panda3d.loaders =
    blend = blend2bam.loader:BlendLoader

[global]
verbose = 0

[aliases]
test = pytest

[tool:pytest]
addopts = --pylint
norecursedirs = .eggs/* blendergltf/* panda3d-gltf/* yabee/*
